--- a/AdoNetApp.WebApp/Views/Order/Edit.cshtml
+++ b/AdoNetApp.WebApp/Views/Order/Edit.cshtml
@@ -17,6 +17,6 @@
         </div>
         <input class="form-control" type="text" asp-for="ProductId" />
     </div>
-    <button class="btn btn-success" type="submit" asp-action="Edit">@ViewData["AddOrEditButton"]</button>
+    <button class="btn btn-success" type="submit" asp-action="Edit">Edit</button>
     <a asp-action="Index" class="btn btn-primary">Cancel</a>
 </form>
