--- a/AdoNetApp.WebApp/Views/Product/Index.cshtml
+++ b/AdoNetApp.WebApp/Views/Product/Index.cshtml
@@ -11,6 +11,7 @@
 <table class="table table-bordered table-striped">
     <thead>
     <tr>
+        <th>Id</th>
         <th>Name</th>
         <th>Description</th>
         <th>Weight</th>
@@ -24,6 +25,7 @@
         @foreach (var product in Model)
         {
         <tr>
+            <td>@product.Id</td>
             <td>@product.Name</td>
             <td>@product.Description</td>
             <td>@product.Weight</td>
